fix: Update mac version and JDK version into yml file (#482)